Update seperate home.html page and link it to index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Soyeon Kim</title>
-  </head>
-  <body>
-    <h1>Init!</h1>
-  </body>
-</html>
+---
+layout: home
+---
